# metalogic-inference

./: AUTHORS  INSTALL  LICENSE  Makefile.am  Makefile.in  README  Readme.txt  THANKS  configure  configure.ac  git-index.0.txt
doc/: Makefile.am  Makefile.in  classes.gv  luatex-math-modified.tex  mdate-sh  mli.info  mli.tex  mli.texi  stamp-vti  version.texi
examples/: LLTtoLL3.mli  local.mk  main.mli
examples/tests/: TD1.mli  TK1.mli  TL1.mli  TML.mli  TS1.mli  Tlambda.mli
man/: Makefile.am  Makefile.in  mli.man
mli/: local.mk
mli/lib/: group.mli
mli/std/: Eq.mli  HL.mli  IR.mli  K.mli  KK.mli  KM.mli  L.mli  LF.mli  LH.mli  LHA.mli  LI.mli  LK.mli  LL.mli  LLT.mli  LM.mli  LR.mli  LS.mli  ML.mli  N.mli  NBG.mli  S.mli  SM.mli  ZF.mli  ZFC.mli  lambda.mli  set.mli
src/: MLI.cc  MLI.hh  Makefile.am  Makefile.in  basictype.cc  basictype.hh  config.in.h  configure  configure.ac  database-lexer.cc  database-lexer.ll  database-parser.cc  database-parser.hh  database-parser.yy  database.cc  database.hh  debug.hh  definition.cc  definition.hh  directive-lexer.cc  directive-lexer.ll  directive-parser.cc  directive-parser.hh  directive-parser.yy  exception.hh  function.cc  function.hh  gc.cc  gc.hh  gmp.cc  gmp.hh  hoare_logic.cc  hoare_logic.hh  inferenceengine.cc  inferenceengine.hh  kleenean.hh  lexer.cc  lexer.ll  location-type.hh  location.hh  (+22 more)
src/include/: FlexLexer.h
tests/: LLTtoLL3.0.mlo  LLTtoLL3.mli  Makefile.am  Makefile.in  TS1.0.mlo  TS1.mli  issue-gen-spec.0.mlo  issue-gen-spec.mli  issue-induction-2.0.mlo  issue-induction-2.mli  issue-induction.0.mlo  issue-induction.mli  issue-meta-0.0.mlo  issue-meta-0.mli  issue-meta-1.0.mlo  issue-meta-1.mli  issue-meta-2.0.mlo  issue-meta-2.mli  issue-meta-3.0.mlo  issue-meta-3.mli  issue-meta-4.0.mlo  issue-meta-4.mli  issue-meta-5.0.mlo  issue-meta-5.mli  issue-meta-6.0.mlo  issue-meta-6.mli  issue-spec.0.mlo  issue-spec.mli  issue-term.0.mlo  issue-term.mli  mli-test  sample-0.0.mlo  sample-0.mli  test-SM.0.mlo  test-SM.mli
